clang/test/BSC/Negative/SafeZone/safe_function_point/safe_function_point.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe int add(int a, int b) {
  return a + b;
}

_Safe double dadd(double a, double b) {
  return a + b;
}

_Safe int dadd2(double a, double b) {
  return 1;
}

typedef _Safe int (*TP)(int a, int b);

int main() {
  _Safe int (*p)(int a, int b) = add;
  p = add;      //ok
  TP tp = add;  // ok

  _Safe int (*pa)(int a);
  pa = add;                          // expected-warning {{incompatible function pointer types assigning to '_Safe int (*)(int)' from '_Safe int (int, int)'}}

  _Safe int (*pp)(double a, double b) = dadd2;
  pp = add;                          // expected-warning {{incompatible function pointer types assigning to '_Safe int (*)(double, double)' from '_Safe int (int, int)'}}
  pp = dadd;                         // expected-warning {{incompatible function pointer types assigning to '_Safe int (*)(double, double)' from '_Safe double (double, double)'}}

  _Unsafe int (*up)(double a, double b);
  up = add;                          // expected-warning {{incompatible function pointer types assigning to 'int (*)(double, double)' from '_Safe int (int, int)'}}
  up = dadd;                         // expected-warning {{incompatible function pointer types assigning to 'int (*)(double, double)' from '_Safe double (double, double)'}}
  _Safe {
    p = &add;       // ok
    TP tp = &add;   // ok
    up = &add;      // expected-error {{incompatible function pointer types assigning to 'int (*)(double, double)' from '_Safe int (*)(int, int)'}}
    up = &dadd;     // expected-error {{incompatible function pointer types assigning to 'int (*)(double, double)' from '_Safe double (*)(double, double)'}}
    p = (TP)add;
    p = (TP)dadd;   // expected-error {{conversion from type '_Safe double (*)(double, double)' to 'TP' (aka 'int (*)(int, int)') is forbidden}}
  }
  p = (TP)add;
  p = (TP)dadd;     // expected-error {{conversion from type '_Safe double (*)(double, double)' to 'TP' (aka 'int (*)(int, int)') is forbidden}}
  return 0;
}
